--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "@types/nodemailer": "^7.0.11",
+    "@vercel/blob": "^2.3.0",
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.3",
     "next": "^14.0.0",
     "next-intl": "^4.6.1",
+    "nodemailer": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^4.3.6"
