Add Vercel Blob Storage token to environment variables example

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ ADMIN_PASSWORD="AdminSecure123!"
 # JWT Secret (IMPORTANT: Change this in production! Min 32 characters)
 JWT_SECRET="your-super-secret-jwt-key-min-32-characters-long-change-in-production"
 
+# Vercel Blob Storage (for file uploads)
+# Get this from Vercel Dashboard -> Storage -> Blob
+BLOB_READ_WRITE_TOKEN="your-vercel-blob-token-here"
+
 # Email Configuration (SMTP)
 # Uncomment and configure for production
 # SMTP_HOST="smtp.gmail.com"
