Fix Blob Storage token name to UPLOAD_BLOB_READ_WRITE_TOKEN

--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ JWT_SECRET="your-super-secret-jwt-key-min-32-characters-long-change-in-productio
 
 # Vercel Blob Storage (for file uploads)
 # Get this from Vercel Dashboard -> Storage -> Blob
-BLOB_READ_WRITE_TOKEN="your-vercel-blob-token-here"
+UPLOAD_BLOB_READ_WRITE_TOKEN="your-vercel-blob-token-here"
 
 # Email Configuration (SMTP)
 # Uncomment and configure for production
