Add email verification, password reset, show/hide password, and mobile responsive design
Features:
- Show/Hide password component with eye icon
- Email verification system (24h token validity)
- Password reset system (1h token validity)
- Forgot password flow
- Mobile responsive design improvements
- Touch-friendly UI for mobile devices

Database:
- Added emailVerified, verificationToken, resetToken, resetTokenExpiry to User model
- Migration applied successfully

Security:
- Email verification required before login
- Secure token generation (32 bytes)
- Password minimum 8 characters
- Tokens cleared after use

--- a/.env.example
+++ b/.env.example
@@ -21,12 +21,16 @@ JWT_SECRET="your-super-secret-jwt-key-min-32-characters-long-change-in-productio
 UPLOAD_BLOB_READ_WRITE_TOKEN="your-vercel-blob-token-here"
 
 # Email Configuration (SMTP)
+# Required for Email Verification & Password Reset
+# For Gmail: Enable 2-Step Verification, then create App Password
 # Uncomment and configure for production
 # SMTP_HOST="smtp.gmail.com"
 # SMTP_PORT="465"
 # SMTP_USER="your-email@gmail.com"
 # SMTP_PASS="your-app-password"
 # SMTP_FROM="MapEg <noreply@mapeg.com>"
+# 
+# Note: Without SMTP, emails will only be logged to console (development mode)
 
 # SEO & Analytics
 # NEXT_PUBLIC_GOOGLE_ANALYTICS="G-XXXXXXXXXX"
